Blender internal does not render face texture alpha in the 64-bit build #35091

Closed
opened 2013-04-26 13:17:04 +02:00 by Julian Siversen · 3 comments

%%%When rendering with the internal render engine, using the
"Face Textures Alpha" in the material options does not appear
to work on the 64-bit version of blender 2.66a.

I was unable to test this on another computers, due to them being 32-bit

Operating System: Windows 7 SP1 64 bit
32 bit version that renders the alpha as expected:

  • Blender 2.66a
  • 2.66.1 r55075:55077
  • archive 32bit version

64-bit version that does not render the alpha:

  • Blender 2.66a
  • 2.66.1 r55078
  • installer 64bit version

To reproduce using the attached .blend file, simply render the scene (F12).
On the 32-bit version of blender it shows a transparent cube, the 64-bit
version of blender shows a black cube.

Full steps to reproduce:

  • Load factory settings
  • Go to edit mode on the default cube
  • With all faces selected press U -> lightmap pack
  • Accept default settings
  • Switch to UV image editor
  • Create a new image using default settings (with alpha)
  • Pack the image as PNG
  • Switch back to 3d veiw
  • Switch to texture paint
  • Change the mode of the brush to Erase alpha
  • Draw randomly on the cube on all sides
  • In the texture settings for the cube, enable transparency, face textures and face textures alpha
  • Render the cube, The result should be a cube with transparent regions on 32-bit, or a black cube on 64-bit%%%
%%%When rendering with the internal render engine, using the "Face Textures Alpha" in the material options does not appear to work on the 64-bit version of blender 2.66a. I was unable to test this on another computers, due to them being 32-bit Operating System: Windows 7 SP1 64 bit 32 bit version that renders the alpha as expected: - Blender 2.66a - 2.66.1 r55075:55077 - archive 32bit version 64-bit version that does not render the alpha: - Blender 2.66a - 2.66.1 r55078 - installer 64bit version To reproduce using the attached .blend file, simply render the scene (F12). On the 32-bit version of blender it shows a transparent cube, the 64-bit version of blender shows a black cube. Full steps to reproduce: - Load factory settings - Go to edit mode on the default cube - With all faces selected press U -> lightmap pack - Accept default settings - Switch to UV image editor - Create a new image using default settings (with alpha) - Pack the image as PNG - Switch back to 3d veiw - Switch to texture paint - Change the mode of the brush to Erase alpha - Draw randomly on the cube on all sides - In the texture settings for the cube, enable transparency, face textures and face textures alpha - Render the cube, The result should be a cube with transparent regions on 32-bit, or a black cube on 64-bit%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn rev56316.

Thanks for the report, closing.%%%

%%%Fixed in svn rev56316. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35091
No description provided.