Fix 35091: Blender internal does not render face texture alpha

Issue was introduced in svn rev54374.

Now made it so image's flag from imagewrap*() argument
is checked instead of using tex->ima, which seems how
this functions were supposed to work.

Doublechecking on this change is really welcome!